CSS and a few changes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page</title>
+  <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
 
   <a href="customerHome.html">I am a Customer</a>
   <br>
   <a href="supplierHome.html">I am  a Water Supplier</a>
- 
    <div>
-    Aare you an admin? 
+    Are you an admin? 
     <a href="adminLogin.html">  Click Here</a> 
   </div>
 </body>
