--- a/HTML/adminLogin.html
+++ b/HTML/adminLogin.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Login</title>
+  <link rel="stylesheet" href="../CSS/styles.css">
+
 </head>
 
 
@@ -16,6 +18,7 @@
 
 
     </ul>
+  </nav>
   <h1>Admin Login</h1>
 
 
@@ -23,11 +26,9 @@
     
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
-    <br><br>
 
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
-    <br><br>
 
     <button type="submit">Login</button>
   </form>
