--- a/HTML/supplierSignup.html
+++ b/HTML/supplierSignup.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Supplier Signup</title>
+  <link rel="stylesheet" href="../CSS/styles.css">
+
 </head>
 <body>
   <h1>Supplier Registration</h1>
