Server v0.1 login and register all functionable

--- a/HTML/customerSignup.html
+++ b/HTML/customerSignup.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Customer Registration</h1>
 
-  <form action="register_customer.php" method="POST">
+  <form action="../server/register_customer.php" method="POST">
     
     <label for="name">Full Name:</label>
     <input type="text" id="name" name="name" required>
