--- a/HTML/supplierLogin.html
+++ b/HTML/supplierLogin.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Supplier Login</h1>
 
-  <form action="supplierLogin.php" method="POST">
+  <form action="../server/supplierLogin.php" method="POST">
     
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
