--- a/HTML/supplierSignup.html
+++ b/HTML/supplierSignup.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Supplier Registration</h1>
 
-  <form action="supplierRegister.php" method="POST" enctype="multipart/form-data">
+  <form action="../server/supplierRegister.php" method="POST" enctype="multipart/form-data">
     
     <label for="factory_name">Factory Name:</label>
     <input type="text" id="factory_name" name="factory_name" required>
