--- a/HTML/adminLogin.html
+++ b/HTML/adminLogin.html
@@ -22,7 +22,7 @@
   <h1>Admin Login</h1>
 
 
-  <form action="adminLogin.php" method="POST">
+  <form action="../server/adminLogin.php" method="POST">
     
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
