--- a/HTML/adminSignup.html
+++ b/HTML/adminSignup.html
@@ -18,7 +18,7 @@
     </ul>
   <h1>Admin Signup</h1>
 
-  <form action="register_admin.php" method="POST">
+  <form action="../server/register_admin.php" method="POST">
     
     <label for="name">Full Name:</label>
     <input type="text" id="name" name="name" required>
