--- a/HTML/customerLogin.html
+++ b/HTML/customerLogin.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Customer Login</h1>
 
-  <form action="customerLogin.php" method="POST">
+  <form action="../server/customerLogin.php" method="POST">
 
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
